# Speech-Recognition-Mass-Survey-Tool

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/: data_analysis.py  main_runner.py
src/audio_tools/: __init__.py  audio_manipulator.py  example_lyric_token.txt  lyric_scraper.py  normalize.py  youtube_downloader.py
src/data/: all_deepgram.json  all_google.json  all_vosk.json  all_wav2.json  all_whisper.json
src/data/text_results/: Song_Results.json  Song_Results1.json  Song_Results2.json  Song_Results3.json  Song_Results4.json  all_deepgram.json  all_google.json  all_vosk.json  all_wav2.json  all_whisper.json
src/deepgram_folder/: __init__.py  deepgram_local_demo.py  deepgram_sample_key.txt
src/google_folder/: __init__.py  google_speech_demo.py
src/lists/: __init__.py  download_list.py  lyric_list.json  lyric_list_dep.json
src/pocketsphinx_folder/: __init__.py  pocketsphinx_demo.py
src/vosk_folder/: __init__.py  vosk_demo.py
src/wav2_folder/: __init__.py  wav2letter_demo.py
src/whisper_folder/: __init__.py  whisper_demo.py
